# discover

./: .gitignore  pyproject.toml  requirements.txt
discover/: app.py  helpers.py
tests/: test_data.csv  test_data_2.csv
