[tool.poetry]
name = "discover"
version = "0.1.0"
description = ""
authors = ["Samad Ahmed <samadahmed2019@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.24.0"
black = "^23.3.0"
boto3 = "^1.26.165"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
